--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Your Website</title>
   <!-- Other head elements -->
-  <meta name="apple-itunes-app" content="app-id=89NBZQ7723, app-argument=rahimiaapp://qa.rahimia.org/">
+  <meta name="apple-itunes-app" content="app-id=89NBZQ7723">
 
   <!-- Start SmartBanner configuration -->
   <meta name="smartbanner:title" content="Rahimia">
