--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="smartbanner:close-label" content="Close">
   <!-- End SmartBanner configuration -->
 
-  <meta name="smartbanner:exclude-user-agent-regex" content="^.*(Version).*Safari">
+  <!--meta name="smartbanner:exclude-user-agent-regex" content="^.*(Version).*Safari"-->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/smartbanner.js/1.19.3/smartbanner.min.css">
 </head>
